Corrected overflow issue with all html items except restaurant lists

--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,8 @@ nav h1 a {
   margin: 0;
   max-width: 100%;
   min-height: 248px;
-  min-width: 100%;
+  /*min-width: 300px;*/
+  width: 100%;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -263,7 +264,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -277,3 +278,9 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+
+/*
+  TODO:
+
+
+*/
